milestone2/Chart/templates/ingress.yaml
#
# INGRESS
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milestone2-ingress
spec:
  rules:
    - http: # route traffic via http
        paths: # define the different paths to route
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apache-service
              port:
                number: 80
        - path: /user # requests made to /user will go to the api and retrieve user_data
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 8000
        - path: /container # requests made to /container will go to the api and retrieve the container Id
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 8000
